# pdf2obsidiannoia

./: .gitignore  README.md  app.py  callouts.py  config.yaml  converter.py  extractor.py  formatter.py  pyproject.toml  requirements.txt  start.sh  wikilinks.py
static/: index.html
tests/: test_callouts.py  test_converter.py  test_extractor.py  test_formatter.py  test_wikilinks.py
