[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pdf2obsidiannoia"
version = "1.0.0"
description = "PDF → Obsidian Markdown, sans IA"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pymupdf",
    "pdfplumber",
    "PyYAML",
]

[project.scripts]
pdf2obsidiannoia = "app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "extractor*", "converter*", "callouts*", "wikilinks*", "formatter*"]

[tool.setuptools.package-data]
"*" = ["static/*.html", "config.yaml"]
